--- a/src/css/site.css
+++ b/src/css/site.css
@@ -25,7 +25,7 @@ html {
 
 body {
     background-color: transparent !important;
-    color: var(--clr-white);
+    color: var(--clr-white) !important;
 
     font-family: "Raleway" !important;
 }
@@ -74,7 +74,9 @@ a {
     background: none !important;
     color: var(--clr-white);
 
-    border-bottom: 1px solid var(--clr-white) !important;
+    /* border-bottom: 1px solid var(--clr-white) !important; */
+    border: 1px solid var(--clr-tarawera) !important;
+    padding: 1em;
 }
 
 .nav-link:hover {
